[tool.poetry]
name = "qlaser-zcu"
version = "0.1.0"
description = "Python API connect to the nanoq system running in the ZCU102 FPGA"
authors = ["Eric Yu <i@eyhc.link>"]
readme = "README.md"
packages = [{include = "qlaser_zcu"}]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
loguru = "^0.7.3"
numpy = "^2.2.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinxcontrib-napoleon = "^0.7"
furo = "^2024.8.6"
sphinx-copybutton = "^0.5.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
